--- a/index.html
+++ b/index.html
@@ -2,7 +2,28 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Netflix Landing Page Clone</title>
+	
+  <title>Netflix 20ᵗʰ anniversary | official NETFLIX website</title>
+	<link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Netflix_icon.svg/2048px-Netflix_icon.svg.png" type="image/gif" sizes="16x16">
+	<meta name="keywords" content="netflix">
+    
+    	<meta name="apple-mobile-web-app-title" content="Netflix 20ᵗʰ anniversary | Official NETFLIX website">
+      <meta name="application-name" content="Netflix 20ᵗʰ anniversary | Official NETFLIX website">
+      <meta name="msapplication-TileColor" content="#E50914">
+      <meta name="theme-color" content="#E50914">
+      <meta name="description" content="We want to celebrate 20 years of pay-TV disruption with you. For a limited time, get 250$ worth of Netflix credit.">
+      <meta property="og:locale" content="en_US">
+      <meta property="og:type" content="website">
+      <meta property="og:title" content="Netflix 20ᵗʰ anniversary | Official NETFLIX website">
+      <meta property="og:description" content="We want to celebrate 20 years of pay-TV disruption with you. For a limited time, get 250$ worth of Netflix credit.">
+      <meta property="og:url" content="https://netflix.com/">
+      <meta property="og:site_name" content="Netflix 20ᵗʰ anniversary | Official NETFLIX website">
+      <meta property="og:image" content="https://wallpaperaccess.com/full/2772922.png">
+      <meta name="twitter:card" content="summary_large_image">
+      <meta name="twitter:description" content="We want to celebrate 20 years of pay-TV disruption with you. For a limited time, get 250$ worth of Netflix credit.">
+      <meta name="twitter:title" content="Netflix 20ᵗʰ anniversary | Official NETFLIX website">
+      <meta name="twitter:image:src" content="https://wallpaperaccess.com/full/2772922.png">
+
   <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.8.2/css/all.css'><link rel="stylesheet" href="./style.css">
 
 </head>
